Initial corrections from RFR